internal/gatewayapi/testdata/backendtrafficpolicy-with-routing-type-listener.in.yaml
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http
          protocol: HTTP
          port: 80
          allowedRoutes:
            namespaces:
              from: All
        - name: https
          protocol: HTTPS
          port: 443
          tls:
            mode: Terminate
            certificateRefs:
              - name: tls-secret
          allowedRoutes:
            namespaces:
              from: All
secrets:
  - apiVersion: v1
    kind: Secret
    metadata:
      namespace: envoy-gateway
      name: tls-secret
    type: kubernetes.io/tls
    data:
      tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUNsekNDQVg4Q0ZIZU9wV1lOdFlhRlFlL3lGRWVHMDdEMXNjSWJNQTBHQ1NxR1NJYjNEUUVCQ3dVQU1CTXgKRVRBUEJnTlZCQU1NQ0dvdVpHOXRZV2x1TUI0WERUSXlNVEF5TVRFek1UZzBPVm9YRFRJeU1URXlNREV6TVRnMApPVm93RXpFUk1BOEdBMVVFQXd3SWFpNWtiMjFoYVc0d2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3CmdnRUtBb0lCQVFESGc2R0ZYbWlhdWl1WDU3R25ycWpYazkvd1JwbTZUcFdkWk9NYjBWQ05PQkVTREhxR1ZBMHEKbEdRdEQzNjZMS3krSDRCcGdJeXBrSG9mOWg4VlpCWi8zaFh5OEVJOUFCTytxTU9xRXVocytWUU5kY2g0Wlp5RAppNGpSZVByRCs3a [...]
      tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2QUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktZd2dnU2lBZ0VBQW9JQkFRREhnNkdGWG1pYXVpdVgKNTdHbnJxalhrOS93UnBtNlRwV2RaT01iMFZDTk9CRVNESHFHVkEwcWxHUXREMzY2TEt5K0g0QnBnSXlwa0hvZgo5aDhWWkJaLzNoWHk4RUk5QUJPdXFNT3FFdWhzK1ZRTmRjaDRaWnlEaTRqUmVQckQrN2pCRGN2OXM0emZjSmY0CksySElPV1VBQ29aeFNVNFdNZmxmeGp1UTc4VU8zSklqdG1OTWkwdWRTaW8zbEtjTWN3Rno5clJ0eFpTSU1EdFYKa0dBYlY3MnpRZ2l1Q2NUT1NlMTN3cElBZ01qVFVUNndLeGpkSldMZ3kzQ0JqUUVSMk93RmdRc2hCVWtadWVtbwpwdUVlTVovT2dwb [...]
httpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      namespace: default
      name: httproute-http
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-1
          sectionName: http
      rules:
        - matches:
            - path:
                value: "/foo"
          backendRefs:
            - name: service-1
              port: 8080
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      namespace: default
      name: httproute-https
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-1
          sectionName: https
      rules:
        - matches:
            - path:
                value: "/bar"
          backendRefs:
            - name: service-2
              port: 8080
backendTrafficPolicies:
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: BackendTrafficPolicy
    metadata:
      namespace: envoy-gateway
      name: policy-for-gateway
    spec:
      targetRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
      routingType: Endpoint
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: BackendTrafficPolicy
    metadata:
      namespace: envoy-gateway
      name: policy-for-http-listener
    spec:
      targetRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        sectionName: http
      routingType: Service
